# course-project-1

./: .env.example  .flake8  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
data/: operations.xlsx
src/: reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
